[gd_scene load_steps=4 format=2]

[ext_resource path="res://Graphics/Gimmicks/ConveyorBelt.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Gimmicks/ConveyorBelt.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 16 )

[node name="ConveyorBelt" type="StaticBody2D"]
collision_layer = 8192
collision_mask = 8192
constant_linear_velocity = Vector2( 60, 0 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 1 )
shape = SubResource( 3 )

[node name="MiddlePiece" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 9
frame = 8
region_enabled = true
region_rect = Rect2( 0, 0, 32, 288 )

[node name="LeftCog" type="Sprite" parent="."]
position = Vector2( -16, 0 )
texture = ExtResource( 1 )
vframes = 9
frame = 6
region_enabled = true
region_rect = Rect2( 0, 0, 48, 288 )

[node name="RightCog" type="Sprite" parent="."]
position = Vector2( 16, 0 )
texture = ExtResource( 1 )
vframes = 9
frame = 7
region_enabled = true
region_rect = Rect2( 0, 0, 48, 288 )
